# Sign_Language_Overlay

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/signs/asl/: mapping.json
assets/signs/auslan/: mapping.json
assets/signs/bsl/: mapping.json
assets/signs/isl/: mapping.json
config/languages/: asl.yaml  bsl.yaml
models/hand/poses/asl/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  a.json  b.json  c.json  d.json  e.json  f.json  (+20 more)
scripts/: generate_asl_illustrations.py  generate_bsl_placeholders.py  generate_multilang_placeholders.py  generate_placeholders.py  generate_synthetic_poses.py  generate_word_placeholders.py  integrate_asl_lex.py  integrate_kaggle_islr.py
src/: animation_controller.py  expression_overlay.py  grammar_transformer.py  hand_model_3d.py  language_manager.py  overlay_window.py  performance_monitor.py  realtime_audio.py  screen_capture.py  settings_gui.py  sign_renderer.py  skeletal_animation.py  speech_to_text.py  subtitle_parser.py  text_to_sign.py  timing_controller.py  word_sign_mapper.py
tests/: test_animation_controller.py  test_expression_overlay.py  test_grammar_transformer.py  test_hand_model_3d.py  test_integration.py  test_language_manager.py  test_performance_monitor.py  test_realtime_audio.py  test_screen_capture.py  test_settings_gui.py  test_skeletal_animation.py  test_speech_to_text.py  test_subtitle_parser.py  test_text_to_sign.py  test_word_sign_mapper.py
tests/sample_files/: sample.srt  sample.vtt
